# avatars

./: .gitignore  Cargo.toml  HANDOFF.md  HANDOFF_TOMORROW.md  PROGRESS.md  README.md  SPEC.md  TECHSPEC.md  build-release.cmd  index.html  package-lock.json  package.json  project_seedlist.txt  start-dev.cmd  start-dev.cmd - Shortcut.lnk  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  viewer.html  vite.config.js  vite.config.viewer.js  vite.config.viewer.ts  vitest.config.ts
advice/: agent-harness-and-convention-synthesis.md
api/: README.md
docs/: AGENTIC_TOOLS.md  AUDIO_PHASE2_TAURI.md  AVATAR_ROSTER_AND_EXECUTOR.md  CODEBASE_GUIDELINES.md  CONTEXT_SCORING.md  CONTEXT_SCORING_CALENDAR.md  CONTEXT_SCORING_CONTACTS.md  CONTEXT_SCORING_EMAIL.md  DEVELOPMENT_CYCLE.md  DISCOVERY_SEARCH_PROMPTS.md  DISTRIBUTION.md  EXTENDING_TRAITS_AND_RULES.md  IMPLEMENTATION_ROADMAP.md  PLATFORM_PERSISTENCE.md  READONLY_COMPANION.md  SOURCE_WORKSHOP.md  STYLEGUIDE.md  SWITCHBOARD_VISUALIZATION.md  TARGETED_SEARCH.md  TEST_PLAN.md  TOOL_WORKSHOP.md  UNMET_NEEDS.md  VISION_AND_USE_CASES.md  WORKSHOPS.md  WORLD_MODEL_AND_PREPROCESSOR.md
src/: App.css  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gmail.rs  lib.rs  main.rs  ollama.rs  platform_cache.rs  session_log.rs  shell.rs  targeted_search.rs  wikidata.rs  world_metadata.rs
viewer-tauri/: Cargo.toml  tauri.conf.json
viewer-tauri/capabilities/: default.json
viewer-tauri/icons/: icon.icns
viewer-tauri/src/: lib.rs  main.rs
(+378 files in other folders)
