[package]
name = "avatars"
version = "0.1.0"
description = "Avatar interface system"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "avatars_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
tiny_http = "0.12"
url = "2"
open = "5"
chrono = "0.4"
urlencoding = "2"
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
